Pagination style fixes on mobile

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -136,14 +136,13 @@
 
 .pagination
   display: grid
-  font-weight: normal
+  font-size: 1rem
   padding: 32px 0
   justify-content: center
   margin-top: 32px
 
   @media screen and (max-width: $break-small)
     margin-top: 8px
-    font-size: .875rem
 
 .page-arrows
   display: flex
